[metadata]
name = certbot-dns-openstack
summary = OpenStack DNS Authenticator plugin for Certbot
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    certbot_dns_openstack

[entry_points]
certbot.plugins =
    dns-openstack = certbot_dns_openstack.dns_openstack:Authenticator

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = certbot_dns_openstack/locale
domain = certbot_dns_openstack

[update_catalog]
domain = certbot_dns_openstack
output_dir = certbot_dns_openstack/locale
input_file = certbot_dns_openstack/locale/certbot_dns_openstack.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = certbot_dns_openstack/locale/certbot_dns_openstack.pot
